[gd_scene load_steps=2 format=3 uid="uid://clv8ba0ta1khi"]

[ext_resource type="Script" path="res://enviornment/level_select.gd" id="1_q8yei"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q8yei")
LevelSelect = Array[String](["levels/level_1.tscn", "levels/level_2.tscn", "levels/level_3.tscn", "levels/level_4.tscn", "levels/level_5.tscn", "enviornment/title_screen.tscn"])

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -33.0
offset_right = 163.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Level 1" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Level 1"

[node name="Level 2" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Level 2"

[node name="Level 3" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Level 3"

[node name="Level 4" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Level 4"

[node name="Level 5" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Level 5"

[node name="Back" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="button_up" from="HBoxContainer/VBoxContainer/Level 1" to="." method="_on_level_1_button_up"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/Level 2" to="." method="_on_level_2_button_up"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/Level 3" to="." method="_on_level_3_button_up"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/Level 4" to="." method="_on_level_4_button_up"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/Level 5" to="." method="_on_level_5_button_up"]
[connection signal="button_up" from="HBoxContainer/Back" to="." method="_on_back_button_up"]
